fixed textarea positioning

--- a/app/assets/stylesheets/scaffolding.less
+++ b/app/assets/stylesheets/scaffolding.less
@@ -164,9 +164,10 @@ header {
 
             textarea {
               display:inline-block;
-              box-sizing:border-box;
               resize:none;
               vertical-align:top;
+              border:none;
+              outline:none;
 
               height:24px;
               line-height:24px;
