Hide list items until markedText ready

--- a/app/assets/javascripts/templates/item_static.handlebars
+++ b/app/assets/javascripts/templates/item_static.handlebars
@@ -1,5 +1,8 @@
 {{#with listItem}}
   <li {{bindAttr class=':entry-item isActive isHighlighted'}} {{bindAttr style='computedIndentionStyle'}}>
-    <span>{{{markedText}}}</span>
+    {{! Doesn't show the span until text has been loaded }}
+    {{#if text}}
+      <span>{{{markedText}}}</span>
+    {{/if}}
   </li>
 {{/with}}
