Added index page; fixed deselecting sidebar note

--- a/app/assets/javascripts/templates/app_window.handlebars
+++ b/app/assets/javascripts/templates/app_window.handlebars
@@ -5,11 +5,11 @@
 <div class="main">
 
   <div class="sidebar-pane">
-  {{outlet list}} 
+  {{outlet sidebar}} 
   </div>
 
   <div class="body-pane">
-  {{outlet note}}
+  {{outlet content}}
   </div>
 
 </div>
