Improved welcome page

--- a/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
+++ b/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
@@ -1,9 +1,5 @@
 <h2>Key Reference</h2>
 
-<p>(ctrl/cmd are interchangeable)</p>
-
-<p>In addition to the below bindings, there&#39;s also some secret-ish VIM bindings (that are also half-implemented). Eventually there will be a toggle between &quot;Noted&quot; bindings and &quot;VIM&quot; bindings.</p>
-
 <h3>Movement Mode</h3>
 
 <h4>Selecting</h4>
@@ -24,7 +20,7 @@
 <li><code>space/double click</code> - Edit item</li>
 <li><del>??? - Change item (same as edit item but highlights all text so it can be replaced, copied, cut, etc)</del></li>
 <li><code>backspace/d</code> - Delete item(s)</li>
-<li><del><code>shift + (backspace/d)</code> - Delete item &amp; children</del></li>
+<li><code>shift + (backspace/d)</code> - Delete item &amp; children</li>
 <li><code>tab/l</code> - Indent item(s) one level</li>
 <li><code>shift+l</code> - Indent item &amp; children one level</li>
 <li><code>shift+tab/h</code> - Outdent (probably not a word) item(s) one level</li>
@@ -33,14 +29,12 @@
 <h4>Clipboard</h4>
 
 <ul>
-<li><code>x</code> - cut item (<em>deleting items with backspace or d also cuts automatically</em>)</li>
+<li><code>x</code> - cut item </li>
 <li><code>c</code> - copy item</li>
-<li><code>v</code> - paste item below current line</li>
-<li><del><code>shift+x</code> - cut item and children</del></li>
-<li><del><code>shift+c</code> - copy item and children</del></li>
+<li><code>v</code> - paste item(s) below current line</li>
+<li><code>shift+x</code> - cut item and children</li>
+<li><code>shift+c</code> - copy item and children</li>
 </ul>
-
-<p>(VIM bindings mode will be different)</p>
 
 <h4>Inserting</h4>
 
