--- a/app/assets/javascripts/templates/static/_welcome_content.md.handlebars
+++ b/app/assets/javascripts/templates/static/_welcome_content.md.handlebars
@@ -2,14 +2,20 @@
 
 <p>Noted is a powerful note-taking tool built for speed. Inspired by powerful text editors like VIM and Emacs, Noted makes manipulating outlines faster and easier than in traditional text editors. Never touch your mouse again!</p>
 
-<h3>Online...</h3>
+<p>Don&#39;t worry about registering a new account - Noted stores your notes offline on your computer. Just click &quot;new&quot; in the bottom-left corner and get to jotting!</p>
+
+<h3>Write outlines as fast as you can type</h3>
+
+<p>Noted&#39;s interface was inspired by modal text editors such as <a href="http://en.wikipedia.org/wiki/Vim_(text_editor">Vim</a>). Check out the <a href="#" class="help-link">keyboard shortcuts</a> to learn how to easily navigate and change list items.</p>
+
+<h3>Save your notes online...</h3>
 
 <p>Export or import your notes to Dropbox with one click. Noted exports notes in a readable, plain-text format that can be viewed on everything from an iPhone to a Palm Pilot.</p>
 
-<h3>...and Offline</h3>
+<h3>...and offline</h3>
 
 <p>Noted works offline just as well as it does online, without any extra downloads or plugins required. If you&#39;re stuck without a connection, just navigate to <code>http://noted.herokuapp.com</code> as you normally would.</p>
 
-<h3>Be Expressive</h3>
+<h3>Be expressive</h3>
 
-<p>Noted supports a subset of Markdown for formatting your text.</p>
+<p>Noted supports a subset of Markdown for formatting your text, letting you quickly add formatting without worrying about cumbersome toolbars or keyboard shortcuts.</p>
