--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -3,7 +3,7 @@
     <h1>noted</h1>
   </div>
   <div class='right'>
-    {{#linkTo "index"}}home{{/linkTo}} / {{#linkTo "static/about"}}about{{/linkTo}} / press ? for <a id="help-link" href="#">help</a>
+    {{#linkTo "index"}}home{{/linkTo}} / {{#linkTo "static/about"}}about{{/linkTo}} / press ? for <a class="help-link" href="#">help</a>
   </div>
 </header>
 
