updated about/welcome pages

--- a/app/assets/javascripts/templates/static/_about_content.md.handlebars
+++ b/app/assets/javascripts/templates/static/_about_content.md.handlebars
@@ -1,10 +1,25 @@
 <h2>About</h2>
 
-<p>Noted is a note-taking app that uses a modal interface. This makes it super easy to manipulate outlines - quickly move lines around, reindent them, etc.</p>
+<p>Noted is a note-taking app that uses a modal interface. This makes it super easy to manipulate outlines - quickly move lines around, reindent them, etc. For more usage information, see the <a href="/">Home</a> and <a href="#" class="help-link">Help</a> pages.</p>
 
-<p>It was made by Thomas Boyt. You should probably follow him on <a href="https://twitter.com/thomasaboyt">Twitter</a> and <a href="https://github.com/thomasboyt">GitHub</a>.</p>
+<p>Noted was made by <a href="http://thomasboyt.com">Thomas Boyt</a> at <a href="http://hackerschool.com">Hacker School</a>. You should totally follow him on <a href="https://twitter.com/thomasaboyt">Twitter</a> and <a href="https://github.com/thomasboyt">GitHub</a>.</p>
 
 <h2>What&#39;s New?</h2>
+
+<p><em>March 23</em></p>
+
+<ul>
+<li>This was added a while ago, but there are now various <strong>block commands</strong> in place for moving around an item and the &quot;sub-items&quot; below and to the right of it:
+
+<ul>
+<li><code>shift+x</code> cuts a block of items</li>
+<li><code>shift+c</code> copies a block of items</li>
+<li><code>shift+delete</code> deletes a block of items</li>
+<li><code>shift+l</code> indents a block of items</li>
+<li><code>shift+tab</code> unindents a block of items</li>
+</ul></li>
+<li></li>
+</ul>
 
 <p><em>February 27</em></p>
 
