--- a/app/assets/javascripts/templates/static/_welcome_content.md.handlebars
+++ b/app/assets/javascripts/templates/static/_welcome_content.md.handlebars
@@ -6,7 +6,7 @@
 
 <h3>Write outlines as fast as you can type</h3>
 
-<p>Noted&#39;s interface was inspired by modal text editors such as <a href="http://en.wikipedia.org/wiki/Vim_(text_editor">Vim</a>). Check out the <a href="#" class="help-link">keyboard shortcuts</a> to learn how to easily navigate and change list items.</p>
+<p>Noted&#39;s interface was inspired by modal text editors such as <a href="http://en.wikipedia.org/wiki/Vim_(text_editor)">Vim</a>. Check out the <a href="#" class="help-link">keyboard shortcuts</a> to learn how to easily navigate and change list items.</p>
 
 <h3>Save your notes online...</h3>
 
