removed unimplemented features from shortcuts

--- a/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
+++ b/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
@@ -2,28 +2,24 @@
 
 <h3>Movement Mode</h3>
 
-<h4>Selecting</h4>
+<h4>Movement</h4>
 
 <ul>
 <li>Click an item to select it</li>
 <li><code>j/down arrow</code> - Move selection down one item</li>
 <li><code>k/up arrow</code> - Move selection up one item</li>
-<li><del><code>shift + (j/down arrow)</code> - Move selection to next item on the same level</del></li>
-<li><del><code>shift + (k/up arrow)</code> - Move selection to previous item on the same level</del></li>
-<li><del><code>a</code> - Select first item</del></li>
-<li><del><code>f</code> - Select last item</del></li>
 </ul>
 
 <h4>Editing</h4>
 
 <ul>
 <li><code>space/double click</code> - Edit item</li>
-<li><del>??? - Change item (same as edit item but highlights all text so it can be replaced, copied, cut, etc)</del></li>
+<li><code>enter</code> - Insert new item on the next line with the same indention level</li>
 <li><code>backspace/d</code> - Delete item(s)</li>
 <li><code>shift + (backspace/d)</code> - Delete item &amp; children</li>
 <li><code>tab/l</code> - Indent item(s) one level</li>
-<li><code>shift+l</code> - Indent item &amp; children one level</li>
-<li><code>shift+tab/h</code> - Outdent (probably not a word) item(s) one level</li>
+<li><code>shift+l/shift+&gt;</code> - Indent item &amp; children one level</li>
+<li><code>shift+tab/h/shift+&lt;</code> - Unindent item &amp; children one level</li>
 </ul>
 
 <h4>Clipboard</h4>
@@ -34,14 +30,6 @@
 <li><code>v</code> - paste item(s) below current line</li>
 <li><code>shift+x</code> - cut item and children</li>
 <li><code>shift+c</code> - copy item and children</li>
-</ul>
-
-<h4>Inserting</h4>
-
-<ul>
-<li><code>enter</code> - Insert new item on the next line with the same indention level</li>
-<li><del> <code>shift+enter</code> - Insert new item on the next line with one indention level deeper</del></li>
-<li><del><code>ctrl+enter</code> - Insert new item on the next line with one indention level less </del></li>
 </ul>
 
 <h3>Edit Mode</h3>
