...actually remembered to markdown:compile

--- a/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
+++ b/app/assets/javascripts/templates/modals/shortcuts/_shortcuts_content.md.handlebars
@@ -10,16 +10,16 @@
 <li><code>k/up arrow</code> - Move selection up one item</li>
 </ul>
 
-<h4>Editing</h4>
+<h4>Modifying Items</h4>
 
 <ul>
 <li><code>space/double click</code> - Edit item</li>
 <li><code>enter</code> - Insert new item on the next line with the same indention level</li>
-<li><code>backspace/d</code> - Delete item(s)</li>
+<li><code>backspace/d</code> - Delete item</li>
 <li><code>shift + (backspace/d)</code> - Delete item &amp; children</li>
-<li><code>tab/l</code> - Indent item(s) one level</li>
+<li><code>l/tab</code> - Indent item one level</li>
 <li><code>shift+l/shift+&gt;</code> - Indent item &amp; children one level</li>
-<li><code>shift+tab/h/shift+&lt;</code> - Unindent item &amp; children one level</li>
+<li><code>h/shift+tab/shift+&lt;</code> - Unindent item &amp; children one level</li>
 </ul>
 
 <h4>Clipboard</h4>
